# mash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.woodpecker/: workflow.yaml
docs/: doc.md
src/: int.cpp  lex.cpp  main.cpp  parse.cpp  value.cpp
src/include/: int.hpp  lex.hpp  parse.hpp  value.hpp
src/tests/: test.cpp
toolchain/: sanitize.cmake
